a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_rapoport/invalidtype4.min
# can't redeclare variables

var x : int;
var x : int;

print x;
